# forex_monitor

./: .gitignore  pyproject.toml
backend/: .env
backend/core/: config.py  http_client.py  init.py  main.py  router.py
