[tool.poetry]
name = "forex-monitor"
version = "0.1.0"
description = ""
authors = ["EfremovAS <Alexef3@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.5"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
